@@ -6,6 +6,8 @@
 + *tetragono*: Add =ap_hamiltonian= to replace the hamiltonian of the ansatz product state in tetragono shell.
 + *tetragono*: Add =multichain_number= for =ap_run=, which will run multiple chains inside the same MPI process.
 + *wrapper*: Add python package =wrapper_TAT= to provide a wrapper over torch to provide similar interface as =TAT.py=.
++ *tetragono*: Add =observe_max_batch_size= option for =ap_run=, which will set the max limit of batch size when
+  calculating wss.
 *** Changed
 *** Deprecated
 + *tetragono*: =gm_data_load= is deprecated, it will be removed in the future, please use =gm_hamiltonian= to replace
